--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,16 +21,20 @@ body {
     background-color: #071422bc;
     border-bottom: 1px solid rgba(255, 255, 255, 0.438);
 }
-
-
-#artContainer {
-    overflow: scroll;
+#artHeader {
+    font-family: "Spartan";
+    font-weight: 300;
+    font-size: 2.5rem;
+    color: #e2f4ff;
+    padding-bottom: 14px;
+    padding-top: 36px;
 }
+
 /* Card styling */
 h3 {
     font-family: "Spartan";
     font-weight: 500;
-    color: #98d9ff;
+    color: #ffffff;
 }
 .ui.fluid.card.articleCard {
     background-color: #ffffff0c;
