--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,11 @@ h3 {
     background-color: #ffffff0c;
     border: none;
 }
+.ui.fluid.card.articleCard:hover {
+    background-color: #ffffff29;
+    transition: .3s ease-in;
+    transition: .15s ease-out;
+}
 .artDesc {
     padding-top: 12px;
     font-family: "Spartan";
@@ -60,8 +65,8 @@ h3 {
     min-height: 12rem;
     background: 
         linear-gradient(0deg,
-        rgba(0, 0, 0, 0.82), 
-        rgba(0, 0, 0, 0.82)), 
+        rgba(0, 0, 0, 0.65), 
+        rgba(0, 0, 0, 0.65)), 
         url();
     background-repeat: no-repeat;
     background-size: cover;
@@ -76,10 +81,21 @@ h3 {
     --y: 0px;
     background-image: url(milky-way-and-starry-night-sky.jpg);
     background-position: var(--x) var(--y);
-    background-size: contain;
+    background-size: 100%;
     /* Inset shadow */
-    -webkit-box-shadow: inset 0px 0px 69px 63px rgba(0,0,0,1);
-    -moz-box-shadow: inset 0px 0px 69px 63px rgba(0,0,0,1);
-    box-shadow: inset 0px 0px 69px 63px rgba(0,0,0,1);
+    -webkit-box-shadow: inset 0px 0px 100px 40px rgba(0,0,0,1);
+    -moz-box-shadow: inset 0px 0px 100px 40px rgba(0,0,0,1);
+    box-shadow: inset 0px 0px 100px 40px rgba(0,0,0,1);
     
+}
+
+
+@media only screen and (max-width: 768px) {
+    #artBlock {
+        margin: 3.2rem;
+    }
+    #artHeader {
+        font-size: 1.8rem;
+        padding-top: 24px;
+    }
 }
