--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ body {
 }
 #floatBlock {
     display: block;
-    float: right;
     background-color: #ffffff0c;
     z-index: 1;
     margin: 40px;
@@ -20,6 +19,7 @@ body {
     padding: 24px;
     font-size: 18px;
     color: white;
+    text-align: left;
 }
 .ui.inverted.segment, .ui.primary.inverted.segment {
     padding: 0px;
