--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     display: block;
     background-color: #ffffff0c;
     z-index: 1;
-    margin: 40px;
+    margin-top: 100px;
     border: 1px solid white;
     border-radius: 4px;
     width: auto;
