--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     height: auto;
 }
 .ui.search .prompt {
-    background-color: rgba(0, 0, 0, 0.45);
+    background-color: rgba(0, 0, 0, 0.247);
     border-color: rgb(255, 255, 255);
 }
 
@@ -22,6 +22,7 @@ body {
     border-color: white;
 }
 .ui.icon.input>input {
+    background-color: #1b1b1b;
     color: white;
     font-family: "Spartan";
     padding-top: 15px;
