--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,4 +187,7 @@ a:hover {
         justify-content: center;
         padding-top: none;
     }
+    #articleContainer {
+        height: 600px;
+    }
 }
